name:                scotty-async-email-example
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/scotty-async-email-example#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     AsyncExample.Main
  build-depends: base >= 4.7 && < 5
               , scotty
               , amazonka
               , lens
               , amazonka-ses
               , aeson
               , stm-chans
               , stm
               , unix
               , immortal
               , network
               , data-default
               , transformers
               , text
               , lens-aeson
               , http-types
  default-language:    Haskell2010

executable async-email-example
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , scotty-async-email-example
  default-language:    Haskell2010

test-suite scotty-async-email-example-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , scotty-async-email-example
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/scotty-async-email-example
